# wwii-local-rag

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/app/: app.py
src/extract/: books_to_jsonl.py  wikipedia_to_jsonl.py
src/local/: ask_rag_ollama.py  build_index_local.py
src/openai/: ask_rag.py  build_index.py
