[project]
name = "rag-ww2"
version = "0.1.0"
description = "Data ingestion and normalization pipeline for a WWII-focused Retrieval-Augmented Generation (RAG) system."
authors = [
    {name = "María González",email = "mgonzgarc@myuax.com"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "pymupdf (>=1.26.7,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "faiss-cpu (>=1.13.1,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
